--- a/gb/18/10/13/n10781229.md
+++ b/gb/18/10/13/n10781229.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ksgvho3562/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ksgvho3562/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ksgvho3562/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>草莓“恐慌”事件  澳洲人用爱和善良回应</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/2018-09-24-14508-strawberry-GettyImages-950161282-600x400.jpg" />
 <h6>从9月下旬的周末开始，澳洲人的周末休闲方式增加了去农场摘草莓一项活动。(FREDERIC J. BROWN/AFP/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2018年10月14日讯】（大纪元记者安平雅悉尼报导）9月初的<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E8%8D%89%E8%8E%93%E8%97%8F%E9%92%88.md#1">草莓藏针</a>事件从<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E6%98%86%E5%A3%AB%E5%85%B0.md#1">昆士兰</a>开始，约一周时间蔓延至全澳与新西兰。此后，该事件又波及到芒果、苹果和香蕉，导致全澳几乎所有大连锁超市将草莓下架，种植者被迫销毁草莓产品。</p>
-<p>就在舆论为草莓种植业者捏把汗之际，人们看到了另一个景象——<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E4%BA%BA.md#1">澳洲人</a>用自己的方式回应这起危害公共安全的食品污染事件。</p>
-<p>蓄意污染食品的动机可能包括敲诈勒索、寻求刺激、迫使竞争对手停业以及报复性行为。而<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E4%BA%BA.md#1">澳洲人</a>善良的表现，从事件最初曝光时的震惊，到开始快速做出回应，足以让犯案者尝到失败感。</p>
+<p>【大纪元2018年10月14日讯】（大纪元记者安平雅悉尼报导）9月初的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8D%89%E8%8E%93%E8%97%8F%E9%92%88.md#1">草莓藏针</a>事件从<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%98%86%E5%A3%AB%E5%85%B0.md#1">昆士兰</a>开始，约一周时间蔓延至全澳与新西兰。此后，该事件又波及到芒果、苹果和香蕉，导致全澳几乎所有大连锁超市将草莓下架，种植者被迫销毁草莓产品。</p>
+<p>就在舆论为草莓种植业者捏把汗之际，人们看到了另一个景象——<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E4%BA%BA.md#1">澳洲人</a>用自己的方式回应这起危害公共安全的食品污染事件。</p>
+<p>蓄意污染食品的动机可能包括敲诈勒索、寻求刺激、迫使竞争对手停业以及报复性行为。而<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E4%BA%BA.md#1">澳洲人</a>善良的表现，从事件最初曝光时的震惊，到开始快速做出回应，足以让犯案者尝到失败感。</p>
 <h3>草莓遇“针凶” 牵动澳人心</h3>
 <p>在热门烹饪网站Taste.com上，最近搜索使用草莓食谱的人显着增加。一夜之间，主题标签为#SmashaStrawb和#saveourstrawberries的文字已成为热门帖文。澳洲人在不同社交媒体上分享自己制作加工的各类草莓美食。</p>
 <p>例如，昆州的反对党领袖费科林通（Deb Frecklington）在脸书上分享：“我会继续支持草莓行业。因此，我会公开家族秘传的草莓食谱。”</p>
@@ -21,7 +21,7 @@
 <p>霍恩比表示，活动当日下午，冰淇淋售罄，但人们还想要捐款。</p>
 <p>“我们制作了不含卡路里的虚拟草莓冰淇淋，也就是说你付5澳元，却什么也得不到，”他说，“我参与了28年多的大型活动及慈善工作，但这次是我参与过的最好的经历之一。”</p>
 <p>从9月下旬的周末开始，澳洲人的周末休闲方式增加了去农场摘草莓一项活动。</p>
-<p>数百人到<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E6%98%86%E5%A3%AB%E5%85%B0.md#1">昆士兰</a>的Chambers Flat草莓农场排着长队买草莓。他们有人几盒几盒的买，有人成箱成箱的买。还有的全家出动，一起去农场里自己动手采摘草莓。</p>
+<p>数百人到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%98%86%E5%A3%AB%E5%85%B0.md#1">昆士兰</a>的Chambers Flat草莓农场排着长队买草莓。他们有人几盒几盒的买，有人成箱成箱的买。还有的全家出动，一起去农场里自己动手采摘草莓。</p>
 <p>在位于阳光海岸的McMartins草莓农场，数百人排着队等待购买草莓。这景象让农场主麦克马丁（Kerrie McMartin）感动。“这真是太感人了，非同寻常，”她说，“我们对公众的支持感到不知无措，非常感谢。”</p>
 <p>无论是在零售商处购买，还是去农场采摘，澳洲人消费了比以往更多的草莓。他们用心在支持草莓种植业者。</p>
 <h3>食品污染历史事件回顾</h3>
@@ -42,42 +42,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/9/20/n8319098.md#1">澳洲超市草莓售价跌破一元 果农叫苦不迭</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/9/15/n10716579.md#1">澳洲草莓藏缝衣针 当局悬赏七万美元缉凶</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/9/16/n10717590.md#1">澳洲草莓被召回 Foodstuffs声明新西兰草莓安全</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/9/19/n10725904.md#1">澳洲草莓藏针污染食物者将获监15年</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/9/20/n10728013.md#1">遏制草莓藏针风波 澳洲Woolworths停售缝衣针</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/9/24/n10736972.md#1">澳洲出口新西兰草莓被发现藏针 已全部下架</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/9/24/n10737430.md#1">澳洲藏针草莓蔓延新西兰 奥克兰超市现首例</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12237417.md#1">阿德莱德超市又惊现“藏针”食品</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12235048.md#1">【7.6澳洲疫情】新州维州关闭边界 百年来首次</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12236037.md#1">企图逃离被封大楼?墨市男咬伤警察后被捕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/20/n8319098.md#1">澳洲超市草莓售价跌破一元 果农叫苦不迭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/15/n10716579.md#1">澳洲草莓藏缝衣针 当局悬赏七万美元缉凶</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/16/n10717590.md#1">澳洲草莓被召回 Foodstuffs声明新西兰草莓安全</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/19/n10725904.md#1">澳洲草莓藏针污染食物者将获监15年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/20/n10728013.md#1">遏制草莓藏针风波 澳洲Woolworths停售缝衣针</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/24/n10736972.md#1">澳洲出口新西兰草莓被发现藏针 已全部下架</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/24/n10737430.md#1">澳洲藏针草莓蔓延新西兰 奥克兰超市现首例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11948562.md#1">南澳边远地区拟开三家武汉病毒检测点</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947011.md#1">澳新州参议员感染武汉肺炎 第三位政治家确诊</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947001.md#1">两超市限购更多商品 鸡蛋冷冻食品每人两份</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/30/n9910984.md#1" target="_blank">文革中自杀的名人（1）人民日报总编邓拓</a></li><li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256379.md#1" target="_blank">观雨堂主：历史并未忘记</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233457.md#1">冀官员深夜与一女同室 被该女丈夫发现跳楼亡</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12234416.md#1">闭关锁国？中共称“经济内循环”引热议</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233438.md#1">【翻墙必看】北京卫戍区密件泄军方秘密</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12234136.md#1">郝海东夫妇讲述宣言幕后的经历 曾立下遗嘱</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12235421.md#1">大陆洪涝灾情严重 至少26省市1770万人受灾</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233623.md#1">美国巨星麦可杰克森转生到湖北工地？</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/3/n12231338.md#1">产妇难产急救无效 新生宝宝一举动让妈妈醒了</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12234872.md#1">TVB祭加辣条款 郑敬基：前所未有的白色恐怖</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12234607.md#1">偶像剧导演杨冠玉骤逝 林依晨等艺人悼念</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/6/29/n12220541.md#1">【佳人传】最像林黛玉的江南才女叶小鸾</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/5/26/n12138633.md#1">【康熙大帝】北疆拒俄 永戍龙兴之地</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233957.md#1">人在做天在看 谋财害命雷公怒</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/10/2/27/n2830119.md#1">班超护国威尊严</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/6/30/n12221096.md#1">断舍离</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ksgvho3562/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ksgvho3562/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/13/n10781229.htm">草莓“恐慌”事件  澳洲人用爱和善良回应</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/13/n10781229.htm">草莓“恐慌”事件  澳洲人用爱和善良回应</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ksgvho3562/djy/blob/master/gb/18/10/13/n10781229.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ksgvho3562/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ksgvho3562/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/18/10/13/n10781229.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
